<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="hideInputMethod"
    android:orientation="vertical"
    tools:context=".activities.ChangePasswordActivity">

    <include layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/image_content_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_new_password"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_current_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="16dp"
            android:background="@drawable/outline_background_color_primary"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_new_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/outline_background_color_primary"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_re_enter_new_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="8dp"
            android:background="@drawable/outline_background_color_primary"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/change_password_button_continue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/button_effect_no_border"
        android:text="@string/save"
        android:textColor="@android:color/white" />

</LinearLayout>