<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/reason"
                android:textAlignment="textStart"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1.3"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonSelectReason"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/outline_background_color_primary"
                    android:drawableEnd="@drawable/ic_nav_next"
                    android:gravity="start|center_vertical"
                    android:paddingStart="@dimen/edit_text_padding"
                    android:paddingEnd="@dimen/edit_text_padding"
                    android:text="@string/please_select"
                    android:textAllCaps="false" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_effect"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="12sp" />


        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>